samples/_failures_safe/1760958455_d9de02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32ac9bf0.c: In function ‘main’:
./samples/SAFE/__tmp_32ac9bf0.c:145:16: error: missing terminating " character
  145 |         printf("
      |                ^
./samples/SAFE/__tmp_32ac9bf0.c:145:9: error: expected expression at end of input
  145 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_32ac9bf0.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32ac9bf0.c:145:9: error: expected declaration or statement at end of input
